--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class="form-inline form-group">
           <input class="form-control" type="text" id="search-value" />
           <button class="btn btn-primary" id="search-button"> <i class="fa fa-search"></i> </button>
+          <button class="btn btn-light" id="clear-history"> Clear History </button>
         </div>
 
         <!-- historical list of city searches -->
