--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- today's forecast -->
         <div id="today" class="mt-3"></div>
         <!-- projected forecast -->
-        <div id="forecast" class="mt-3"></div>
+        <div id="forecast" class="mt-3 row"></div>
       </div>
     </div>
   </div>
