--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div class="col-lg-9">
         <!-- today's forecast -->
-        <div id="today" class="mt-3"></div>
+        <div id="today" class="mt-3 row"></div>
         <!-- projected forecast -->
         <div id="forecast" class="mt-3 row"></div>
       </div>
@@ -41,6 +41,7 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="script.js"></script>
 </body>
 
